[package]
name = "browserkvm"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.0.14"
rdev = "0.5.2"
webrtc = "0.7.1"
tokio = "1.26.0"
signal = { path = "signal" }
anyhow = "1.0.69"
bytes = "1.4.0"
rust_socketio = "0.4.1"
tungstenite = {version = "0.18.0", features = ["native-tls"] }
url = "2.3.1"
hyper = { version = "0.14", features = ["full"] } # not necessary?
clap = "3.0" # not necessary?
lazy_static = "1.4.0" # not necessary?
env_logger = "0.10.0" # not necessary?
chrono = "0.4.24" # not necessary?
log = "0.4.17" # not necessary?
tokio-util = "0.7.7" # not necessary?
tokio-tungstenite = "0.18.0"
futures-util = "0.3.27"
futures-channel = "0.3.27"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[example]]
name = "offer"
path = "cli/offer-answer/offer.rs"
bench = false

[[example]]
name = "offer2"
path = "cli/offer-answer/offer2.rs"
bench = false

[[example]]
name = "offer3"
path = "cli/offer-answer/offer3.rs"
bench = false

[[example]]
name = "answer"
path = "cli/offer-answer/answer.rs"
bench = false
