[package]
name = "browserkvm"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rdev = { git = "git@github.com:ollipal/rdev.git", rev = "272f420" } # Fix for linux scrolling
webrtc = "0.7.1"
tokio = "1.26.0"
anyhow = "1.0.69"
tungstenite = {version = "0.18.0", features = ["native-tls"] }
lazy_static = "1.4.0"
tokio-tungstenite = {version = "0.18.0", features = ["native-tls"] }
futures-util = "0.3.27"
futures = "0.3.28"
copypasta = "0.8.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# [[example]]
# name = "offer"
# path = "cli/offer-answer/offer.rs"
# bench = false

# [[example]]
# name = "websocket"
# path = "cli/offer-answer/websocket.rs"
# bench = false

# [[example]]
# name = "answer"
# path = "cli/offer-answer/answer.rs"
# bench = false

# from: https://tauri.app/v1/guides/building/app-size/#rust-build-time-optimizations
[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
